test.log
  File "/root/work/NIDS/gen.py", line 159
    roc_threshold = give_threshold(gan, 'ROC', X_val, x_val[name][1])
    ^
IndentationError: expected an indented block after 'if' statement on line 158
